--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -3,7 +3,7 @@
     <div class="client-works">
         <ul id="mahindra" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("MahindraTah","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/tah-thum.jpg" alt="" /> <span>Kar Bachat Yojana</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("MahindraMF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-thum.jpg" alt="" /> <span>MAHINDRA MANULIFE MUTUAL FUND</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("MahindraMF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-thum.jpg" alt="" /> <span>MAHINDRA MUTUAL FUND</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("MahindraNfoLaunches","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-info-thum.jpg" alt="" /> <span>MMF NFO Launches</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("MahindraBadhatYojana","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/badhat-yojana-thum.jpg" alt="" /> <span>MMF BADHAT YOJANA</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("MahindraUnnati","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mahindra-unnati-thum.jpg" alt="" /> <span>UNNATI EMERGING BUSINESS YOJANA</span> </a> </li>
@@ -11,7 +11,7 @@
             <li class="fadeRight t-animated" data-t-show="7"><a href="@Url.Action("MahindraPragatiYojana","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-pragati-yojana-thum.jpg" alt="" /> <span>Mahindra Pragati Yojana</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("MahindraRuralBharat","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mahindra-rural-bharat-thum.jpg" alt="" /> <span>Mahindra Rural Bharat</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="9"><a href="@Url.Action("mahindra-top-nfo","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-top250.jpg" alt="" /> <span>TOP 250 NIVESH YOJANA</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="10"><a href="@Url.Action("mmf-app","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-app-thum.jpg" alt="" /> <span>MAHINDRA MANULIFE MUTUAL FUND APP</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="10"><a href="@Url.Action("mmf-app","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-app-thum.jpg" alt="" /> <span>MAHINDRA MUTUAL FUND APP</span> </a> </li>
         </ul>
 
         <ul id="pandg" class="horizontalScroll">
@@ -32,7 +32,7 @@
 
             <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("KZK","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/kzk-thum.jpg" alt="" /> <span>Kasauti Zindagi ki</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("KZK-AR","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/kzk-ar-thum.jpg" alt="" /> <span>Kasauti Zindagi ki AR</span> </a> </li>
-			<li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("Ek-Bhram","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ek-bhram-thum.jpg" alt="" /> <span>Ek Bhram Sarvagun Sampanna</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("Ek-Bhram","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ek-bhram-thum.jpg" alt="" /> <span>Ek Bhram Sarvagun Sampanna</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("kullfimissedcall","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/kulfi-missed-call-thum.jpg" alt="" /> <span>Kulfi Missed Call</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="7"><a href="@Url.Action("star-second-screen","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/second-screen-thum.jpg" alt="" /> <span>Star Second Screen</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("star-plus-brand-refresh","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/start-brand-refresh-thum.jpg" alt="" /> <span>Star Brand Refresh</span> </a> </li>
@@ -66,8 +66,8 @@
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Swp","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/swp-thum.jpg" alt="" /> <span>Star Writers Program</span> </a> </li>
             <!--  <li class="fadeRight t-animated" data-t-show="10"><a href="ted.php" class="hvr-grow-shadow"><img src="images/thums/ted-thum.jpg" alt=""/> <span>Ted Talks</span> </a> </li>
 
-        <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
-        <li class="fadeRight t-animated" data-t-show="12"><a href="hsubh.php" class="hvr-grow-shadow"><img src="images/thums/hsubh-thum.jpg" alt=""/> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>	-->
+            <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="12"><a href="hsubh.php" class="hvr-grow-shadow"><img src="images/thums/hsubh-thum.jpg" alt=""/> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>	-->
         </ul>
         <ul id="star" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Swp","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/swp-thum.jpg" alt="" /> <span>Star Writers Program</span> </a> </li>
@@ -82,6 +82,10 @@
             <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("IndiaRF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/india-rf-thum.jpg" alt="" /> <span>India RF</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("Pchf","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/pchf-thum.jpg" alt="" /> <span>Piramal Capital Housing Finance</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("piramalfoundation","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/piramal-foundation-thum.jpg" alt="" /> <span>Piramal Foundation</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("GandhiFellowship","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/gandhi-fellowship-thum.jpg" alt="" /> <span>Gandhi Fellowship</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("iCanHelp","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ican-thum.jpg" alt="" /> <span>iCanHelp</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("ourdaily","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ourdaily-thum.jpg" alt="" /> <span>OurDaily</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("triactive","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/triactive-thum.jpg" alt="" /> <span>TriActive</span> </a> </li>
         </ul>
         <ul id="usports" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("USports","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/usports-thum.jpg" alt="" /> <span>USports</span> </a> </li>
@@ -93,8 +97,8 @@
 
 
         @*<ul id="oneplus" class="horizontalScroll">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("OnePlus","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/oneplus-thum.jpg" alt="" /> <span>One Plus</span> </a> </li>
-        </ul>*@
+                <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("OnePlus","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/oneplus-thum.jpg" alt="" /> <span>One Plus</span> </a> </li>
+            </ul>*@
 
         <ul id="sarva" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("sarva-app","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/sarva-app-thum.jpg" alt="" /> <span>Sarva App</span> </a> </li>
@@ -103,38 +107,40 @@
 
         </ul>
         @*<ul id="dubsmash" class="horizontalScroll">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Dubsmash","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/dubsmash-thum.jpg" alt="" /> <span>Dubsmash</span> </a> </li>
-        </ul>*@
+                <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Dubsmash","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/dubsmash-thum.jpg" alt="" /> <span>Dubsmash</span> </a> </li>
+            </ul>*@
         @*<ul id="pedderjohnson" class="horizontalScroll">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Pedderjohnson","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/pedderjohnson-thum.jpg" alt="" /> <span>Pedder Johnson</span> </a> </li>
-        </ul>*@
-        
+                <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Pedderjohnson","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/pedderjohnson-thum.jpg" alt="" /> <span>Pedder Johnson</span> </a> </li>
+            </ul>*@
+
         @*<ul id="boutique" class="horizontalScroll">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("bql","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/boutique-thum.jpg" alt="" /> <span>Boutique Living</span> </a> </li>
-        </ul>*@
+                <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("bql","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/boutique-thum.jpg" alt="" /> <span>Boutique Living</span> </a> </li>
+            </ul>*@
         @*<ul id="mgage" class="horizontalScroll">
-           <li class="fadeRight t-animated" data-t-show="1"><a href="m-gage.php" class="hvr-grow-shadow"><img src="images/thums/mGage-thum.jpg" alt=""/> <span>mGage</span> </a> </li>
-         </ul>
-        <ul id="times-network" class="horizontalScroll">
-          <li class="fadeRight t-animated" data-t-show="1"><a  class="hvr-grow-shadow"><img src="images/thums/nach-baliye-8-thum.jpg" alt=""/> <span>Times Network</span> </a> </li>
-        </ul>*@
+               <li class="fadeRight t-animated" data-t-show="1"><a href="m-gage.php" class="hvr-grow-shadow"><img src="images/thums/mGage-thum.jpg" alt=""/> <span>mGage</span> </a> </li>
+             </ul>
+            <ul id="times-network" class="horizontalScroll">
+              <li class="fadeRight t-animated" data-t-show="1"><a  class="hvr-grow-shadow"><img src="images/thums/nach-baliye-8-thum.jpg" alt=""/> <span>Times Network</span> </a> </li>
+            </ul>*@
     <ul id="bhartiaxa" class="horizontalScroll">
         <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Bharti-Axa","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/bharti-axa-thum.jpg" alt="" /> <span>Bharti AXA</span> </a> </li>
         <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("BhartiAxaPolicy","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/bharti-axa-policy-thum.jpg" alt="" /> <span>Bharti AXA Policy</span> </a> </li>
+        <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("bharti-axa-cop-app","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/bharti-axa-cop-app-thum.jpg" alt="" /> <span>Bharti AXA Cop App</span> </a> </li>
     </ul>
-		<ul id="indiabulls" class="horizontalScroll">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("sky","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/sky-thum.jpg" alt="" /> <span>Sky</span> </a> </li>
+    <ul id="indiabulls" class="horizontalScroll">
+        <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("sky","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/sky-thum.jpg" alt="" /> <span>Sky</span> </a> </li>
 
-            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Yaarii","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-thum.jpg" alt="" /> <span>Yaarii</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("yaarii-films","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-film-thum.jpg" alt="" /> <span>Yaarii Film</span> </a> </li>
-        </ul>
+        <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Yaarii","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-thum.jpg" alt="" /> <span>Yaarii</span> </a> </li>
+        <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("yaarii-films","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/yaarii-film-thum.jpg" alt="" /> <span>Yaarii Film</span> </a> </li>
+        <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("IndiabullsBlu","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/indiabulls-blu-thum.jpg" alt="" /> <span>Indiabulls BLU</span> </a> </li>
+    </ul>
         <ul id="nutrela" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("nutrela","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ruchi-soya-thum.jpg" alt="" /> <span>Nutrela</span> </a> </li>
         </ul>
 
         @*<ul id="birlawhiteputty" class="horizontalScroll">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("birla-white-repaint-putty","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/birla-wall-putty-thum.jpg" alt="" /> <span>Birla White Repaint Putty</span> </a> </li>
-        </ul>*@
+                <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("birla-white-repaint-putty","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/birla-wall-putty-thum.jpg" alt="" /> <span>Birla White Repaint Putty</span> </a> </li>
+            </ul>*@
 
 
     <ul id="others" class="horizontalScroll">
@@ -148,6 +154,7 @@
 
         <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("birla-white-repaint-putty","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/birla-wall-putty-thum.jpg" alt="" /> <span>Birla White Repaint Putty</span> </a> </li>
         <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("OnePlus","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/oneplus-thum.jpg" alt="" /> <span>One Plus</span> </a> </li>
+        <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("cameo","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/cameo-thum.jpg" alt="" /> <span>Cameo</span> </a> </li>
 
     </ul>
 
@@ -162,7 +169,7 @@
         <li class="mahindra"><a data-related="mahindra" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/mahindra.png" alt="" /></a> </li>
         <li class="star-plus"><a data-related="starplus" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/star.png" alt="" /></a> </li>
         @*<li class="star"><a href="" data-related="star" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/starplus.png" alt="" /></a> </li>*@
-        
+
 
         <li class="png-health"><a href="" data-related="pandg" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/p-and-g.png" alt="" /></a> </li>
         <li class="piramal"><a data-related="piramal" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/piramal.png" alt="" /></a> </li>
@@ -170,7 +177,7 @@
         <li class="usports"><a href="" data-related="usports" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/usports.png" alt="" /></a> </li>
         <li class="sarva"><a data-related="sarva" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/sarva.png" alt="" /></a> </li>
         <li class="bharti-axa"><a data-related="bhartiaxa" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/bharti-axa.png" alt="" /></a> </li>
-		<li class="indiabulls"><a data-related="indiabulls" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/indiabulls.png" alt="" /></a> </li>
+        <li class="indiabulls"><a data-related="indiabulls" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/indiabulls.png" alt="" /></a> </li>
 
         <li class="others"><a data-related="others" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/others.png" alt="" /></a> </li>
         @*   <li class="dubsmash"><a href="" data-related="dubsmash" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/dubsmash.png" alt="" /></a> </li>*@
@@ -184,8 +191,8 @@
         @*<li class="nutrela"><a data-related="nutrela" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/nutrela.png" alt="" /></a> </li>*@
         @* <li class="birlawhiteputty"><a data-related="birlawhiteputty" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/birla-white.png" alt="" /></a> </li>*@
         @*<li class="dubsmash"><a  data-related="dubsmash" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/dubsmash.png" alt="" /></a> </li>
-        <li class="pedderjohnson"><a  data-related="pedderjohnson" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/pedderjohnson.png" alt="" /></a> </li>
-        <li class="yaarii"><a  data-related="yaarii" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/yaarii.png" alt="" /></a> </li>*@
+            <li class="pedderjohnson"><a  data-related="pedderjohnson" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/pedderjohnson.png" alt="" /></a> </li>
+            <li class="yaarii"><a  data-related="yaarii" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/yaarii.png" alt="" /></a> </li>*@
 
 
     </ul>
