--- a/Sparkt.WebApp/Views/work/IndiabullsBlu.cshtml
+++ b/Sparkt.WebApp/Views/work/IndiabullsBlu.cshtml
@@ -1,25 +1,24 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | ICan Help";
+    ViewBag.Title = "Sparkt Work | Indiabulls-Blu";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
-    ViewBag.MetaTitle = "Sparkt | ICan Help";
-    ViewBag.MetaDescription = "Intimate Confidant";
-    ViewBag.MetaURL = "https://sparkt.in/work/iCanhelp";
-    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ican-thum.jpg";
+    ViewBag.MetaTitle = "Sparkt | Indiabulls blu";
+    ViewBag.MetaDescription = "Higher Still";
+    ViewBag.MetaURL = "https://sparkt.in/work/indiabulls-blu";
+    ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/indiabulls-blu-thum.jpg";
 }
 
-@section BodyClass {ICan}
     <main>
-        <div class="section white-bg">
+        <div class="section">
             <div class="work-banner">
                 <div class="banner-source">
-                    <div class="banner-video  middle-align" style="background-image: url('/Content/work/images/banners/ican-cover.jpg');"> </div>
+                    <div class="banner-video  middle-align" style="background-image: url('/Content/work/images/banners/indiabulls-blu-cover.jpg');"> </div>
                 </div>
-                <div class="head-title floated text-color-dark">
+                <div class="head-title floated">
                     <i class="title-icon"><img src="/Content/work/images/title-icon.png" alt="" /></i>
-                    <h1><span style="text-transform: lowercase">i</span>-Canhelp</h1>
+                    <h1>India Bulls Blu</h1>
                     <div class="clear"></div>
-                    <span>Intimate Confidant</span>
+                    <span>Higher Still </span>
                 </div>
             </div>
             @Html.Partial("_WorkMenu")
@@ -30,31 +29,33 @@
                 <h2>Creative Experience</h2>
             </div>
             <div class="creative-assets-wrapp">
-                <div class="assets-carousel piramal-ican-bg ">
+                <div class="assets-carousel indiabulls-blu-bg ">
                     <div class="slider">
                         <div>
                             <div class="creative-assets ">
                                 <div class="container">
                                     <div class="assets-title">
-                                        <h3>No matter what you are going through, Icanhelp is your one is you intimate confidant. </h3>
+                                        <h3>Experience the grandeur of Blu</h3>
                                     </div>
                                     <div class="website-operation">
                                         <figure class="figure-img"> <img src="/Content/work/images/banner-video-trans.png" alt="brickex" class="responsive-img" style="width: 100%; vertical-align: top;" /> </figure>
                                         <div class="desktop-video">
-                                            <video id="desktop" poster="/Content/work/images/ican-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/ican-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
+                                            <video id="desktop" poster="/Content/work/images/indiabulls-blu-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/indiabulls-blu-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                                 <!-- <source  src="media/brickex-desktop.mp4" type="video/mp4" >-->
 
                                             </video>
                                             <script>document.getElementById( "desktop" ).controls = false;</script>
                                         </div>
                                         <div class="mobile-video">
-                                            <video id="mobile" poster="/Content/work/images/ican-mobile.jpg" style="max-width: 100%; background-image: url('/Content/work/images/ican-mobile.jpg');" preload="none" controls="false" muted autoplay loop playsinline webkit-playsinline>
+                                            <video id="mobile" poster="/Content/work/images/indiabulls-blu-mobile.jpg" style="max-width: 100%; background-image: url('/Content/work/images/indiabulls-blu-mobile.jpg');" preload="none" controls="false" muted autoplay loop playsinline webkit-playsinline>
                                                 <!-- <source  src="media/brickex-mob.mp4" type="video/mp4" >-->
 
                                             </video>
                                             <script>document.getElementById("mobile").controls = false;</script>
                                         </div>
-                                        <!--                  <a href="https://www.pchf.in/" target="_blank" class="view-website" >VIEW WEBSITE</a> -->
+
+                                        <!--<a href="https://piramalfinance.com/" target="_blank" class="view-website" >VIEW WEBSITE</a>-->
+
                                     </div>
                                 </div>
                             </div>
@@ -63,20 +64,6 @@
                 </div>
             </div>
         </div>
-        <div class="section white-bg">
-            <!-- <div class="head-title floated text-color-dark"> <i class="title-icon"><img src="images/title-icon.png" alt=""/></i>
-          <h2>Results</h2>
-        </div>-->
 
-            <div class="container">
-                <div class="quotes-wrapp">
-                    <div class="quotes">
-                        <h3>Coming Soon</h3>
-                        <span class="quotes-writer"></span>
-                    </div>
-                </div>
-            </div>
-        </div>
     </main>
-
 
