--- a/Sparkt.WebApp/Views/work/Pedderjohnson.cshtml
+++ b/Sparkt.WebApp/Views/work/Pedderjohnson.cshtml
@@ -49,14 +49,14 @@
                                     <div class="desktop-video">
 
 
-                                        <video id="desktop" poster="/Content/work/images/pedderjohnson-desktop.jpg" style="max-width: 100%;" preload="none" controls="False" autoplay loop playsinline webkit-playsinline>
+                                        <video id="desktop" poster="/Content/work/images/pedderjohnson-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/pedderjohnson-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!--  <source  src="media/brickex-desktop.mp4" type="video/mp4" >-->
 
                                         </video>
                                         <script>document.getElementById("desktop").controls = false;</script>
                                     </div>
                                     <div class="mobile-video">
-                                        <video id="mobile" poster="/Content/work/images/pedderjohnson-mobile.jpg" style="max-width: 100%;" preload="none" controls="false" autoplay loop playsinline webkit-playsinline>
+                                        <video id="mobile" poster="/Content/work/images/pedderjohnson-mobile.jpg" style="max-width: 100%; background-image: url('/Content/work/images/pedderjohnson-mobile.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!-- <source  src="media/brickex-mob.mp4" type="video/mp4" >-->
 
                                         </video>
