--- a/Sparkt.WebApp/Views/work/Yaarii.cshtml
+++ b/Sparkt.WebApp/Views/work/Yaarii.cshtml
@@ -47,7 +47,7 @@
                                     <div class="desktop-video">
 
 
-                                        <video id="desktop" poster="~/Content/work/images/yaarii-desktop.jpg" style="max-width: 100%;" preload="none" controls="False">
+                                        <video id="desktop" poster="~/Content/work/images/yaarii-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/yaarii-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!--  <source  src="media/piramal-desktop.mp4" type="video/mp4" >-->
 
                                         </video>
@@ -56,7 +56,7 @@
                                         </script>
                                     </div>
                                     <div class="mobile-video">
-                                        <video id="mobile" poster="~/Content/work/images/yaari-app.gif" style="max-width: 100%;" preload="none" controls="false">
+                                        <video id="mobile" poster="~/Content/work/images/yaari-app.gif" style="max-width: 100%; background-image: url('/Content/work/images/yaari-app.gif" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!--<source  src="media/piramal-mobile.mp4" type="video/mp4" >-->
 
                                         </video>
