--- a/Sparkt.WebApp/Views/work/bql.cshtml
+++ b/Sparkt.WebApp/Views/work/bql.cshtml
@@ -51,7 +51,7 @@
                                     <div class="desktop-video">
 
 
-                                        <video id="desktop" poster="~/Content/work/images/bql-desktop.jpg" style="max-width: 100%;" preload="none" controls="False" autoplay playsinline webkit-playsinline>
+                                        <video id="desktop" poster="~/Content/work/images/bql-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/bql-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!--<source  src="media/desktop.mp4" type="video/mp4" >
                                             <source src="media/desktop.ogg" type="video/ogg" >-->
                                         </video>
@@ -59,7 +59,7 @@
                                         </script>
                                     </div>
                                     <div class="mobile-video">
-                                        <video id="mobile" poster="~/Content/work/images/bql-mobile.jpg" style="max-width: 100%;" preload="none" controls="false" autoplay playsinline webkit-playsinline>
+                                        <video id="mobile" poster="~/Content/work/images/bql-mobile.jpg" style="max-width: 100%; background-image: url('/Content/work/images/bql-mobile.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!--<source  src="media/mobile.mp4" type="video/mp4" >
                                             <source src="media/mobile.ogg" type="video/ogg" >-->
                                         </video>
