--- a/Sparkt.WebApp/Views/work/MGage.cshtml
+++ b/Sparkt.WebApp/Views/work/MGage.cshtml
@@ -48,7 +48,7 @@
                                     <div class="desktop-video">
 
 
-                                        <video id="desktop" poster="~/Content/work/images/m-gage-desktop.jpg" style="max-width: 100%;" preload="none" controls="False" autoplay playsinline webkit-playsinline>
+                                        <video id="desktop" poster="~/Content/work/images/m-gage-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/m-gage-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!--<source  src="media/desktop.mp4" type="video/mp4" >
                                             <source src="media/desktop.ogg" type="video/ogg" >-->
                                         </video>
@@ -57,7 +57,7 @@
                                         </script>
                                     </div>
                                     <div class="mobile-video">
-                                        <video id="mobile" poster="~/Content/work/images/m-gage-mobile.jpg" style="max-width: 100%;" preload="none" controls="false" autoplay playsinline webkit-playsinline>
+                                        <video id="mobile" poster="~/Content/work/images/m-gage-mobile.jpg" style="max-width: 100%; background-image: url('/Content/work/images/m-gage-mobile.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!--<source  src="media/mobile.mp4" type="video/mp4" >
                                             <source src="media/mobile.ogg" type="video/ogg" >-->
                                         </video>
