--- a/Sparkt.WebApp/Views/work/MahindraMFExperience.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraMFExperience.cshtml
@@ -75,14 +75,14 @@
                                     <figure class="figure-img"> <img src="~/Content/work/images/banner-video-trans.png" alt="brickex" class="responsive-img" style="width: 100%; vertical-align: top;" /> </figure>
                                     <div class="desktop-video">
 
-                                        <video id="desktop" poster="~/Content/work/images/mmf-desktop.jpg" style="max-width: 100%;" preload="none" controls="False" autoplay playsinline webkit-playsinline>
+                                        <video id="desktop" poster="~/Content/work/images/mmf-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/mmf-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!--<source  src="media/desktop.mp4" type="video/mp4" >
                                             <source src="media/desktop.ogg" type="video/ogg" >-->
                                         </video>
                                         <script>document.getElementById("desktop").controls = false;</script>
                                     </div>
                                     <div class="mobile-video">
-                                        <video id="mobile" poster="~/Content/work/images/mmf-mobile.jpg" style="max-width: 100%;" preload="none" controls="false" autoplay playsinline webkit-playsinline>
+                                        <video id="mobile" poster="~/Content/work/images/mmf-mobile.jpg" style="max-width: 100%; background-image: url('/Content/work/images/mmf-mobile.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!--<source  src="media/mobile.mp4" type="video/mp4" >
                                             <source src="media/mobile.ogg" type="video/ogg" >-->
                                         </video>
