--- a/Sparkt.WebApp/Views/work/PiramalFoundation.cshtml
+++ b/Sparkt.WebApp/Views/work/PiramalFoundation.cshtml
@@ -71,14 +71,14 @@
                                     <div class="desktop-video">
 
 
-                                        <video id="desktop" poster="~/Content/work/images/piramal-foundation-desktop.jpg" style="max-width: 100%;" preload="none" controls="False">
+                                        <video id="desktop" poster="~/Content/work/images/piramal-foundation-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/piramal-foundation-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!--  <source  src="media/piramal-desktop.mp4" type="video/mp4" >-->
 
                                         </video>
                                         <script>document.getElementById("desktop").controls = false;</script>
                                     </div>
                                     <div class="mobile-video">
-                                        <video id="mobile" poster="~/Content/work/images/piramal-foundation-mobile.jpg" style="max-width: 100%;" preload="none" controls="false">
+                                        <video id="mobile" poster="~/Content/work/images/piramal-foundation-mobile.jpg" style="max-width: 100%; background-image: url('/Content/work/images/piramal-foundation-mobile.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                             <!--<source  src="media/piramal-mobile.mp4" type="video/mp4" >-->
 
                                         </video>
