--- a/Sparkt.WebApp/Views/work/Sky.cshtml
+++ b/Sparkt.WebApp/Views/work/Sky.cshtml
@@ -71,7 +71,7 @@
                                         <div class="desktop-video">
 
 
-                                            <video id="desktop" poster="~/Content/work/images/indiabulls-sky-desktop.jpg" style="max-width: 100%;" preload="none" controls="False">
+                                            <video id="desktop" poster="~/Content/work/images/indiabulls-sky-desktop.jpg" style="max-width: 100%; background-image: url('/Content/work/images/indiabulls-sky-desktop.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                                 <!--<source  src="media/piramal-desktop.mp4" type="video/mp4" >-->
 
                                             </video>
@@ -80,7 +80,7 @@
                                             </script>
                                         </div>
                                         <div class="mobile-video">
-                                            <video id="mobile" poster="~/Content/work/images/indiabulls-sky-mobile.jpg" style="max-width: 100%;" preload="none" controls="false">
+                                            <video id="mobile" poster="~/Content/work/images/indiabulls-sky-mobile.jpg" style="max-width: 100%; background-image: url('/Content/work/images/indiabulls-sky-mobile.jpg');" preload="none" controls="False" muted autoplay loop playsinline webkit-playsinline>
                                                 <!-- <source  src="media/piramal-mobile.mp4" type="video/mp4" >-->
 
                                             </video>
